# fastapi-utils

./: .gitignore  CLAUDE.md  IN-FLIGHT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/persysta_utils/: __init__.py  audit.py  errors.py  health.py  mixins.py  rate_limit.py  security_headers.py  sentry.py
src/persysta_utils/email/: __init__.py  config.py  service.py
tests/: test_audit.py  test_email.py  test_errors.py  test_health.py  test_mixins.py  test_rate_limit.py  test_security_headers.py  test_sentry.py
