[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "persysta-platform-fastapi-utils"
version = "0.3.0"
description = "Shared utilities (errors, mixins, sentry init, rate limit, email service with Brevo + SendGrid HTTP, security headers, health, audit log) for Persysta + Vinon"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Eduardo Crovadore"}]
dependencies = [
    "fastapi>=0.110",
    "sqlalchemy>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
sentry = ["sentry-sdk[fastapi]>=2.0"]
rate-limit = ["slowapi>=0.1.9"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.8",
    "mypy>=1.10",
    "sentry-sdk[fastapi]>=2.0",
    "slowapi>=0.1.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/persysta_utils"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "PIE", "RET", "SIM"]
ignore = ["S101"]
